force-app/main/default/objects/RICEFW_Inventory__c/RICEFW_Inventory__c.object-meta.xml
<CustomObject>
    <description>Stores RICEFW inventory items which comprise AP250 deliverable.</description>
    <label>RICEFW Inventory</label>
    <nameField>
        <label>RICEFW Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RICEFW Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>