force-app/main/default/objects/RICEFW_Inventory__c/fields/New_Modified__c.field-meta.xml
<CustomField>
    <fullName>New_Modified__c</fullName>
    <label>New / Modified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>