force-app/main/default/objects/RICEFW_Inventory__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>RICEFW Inventories</relationshipLabel>
    <relationshipName>RICEFW_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>