force-app/main/default/objects/RICEFW_Inventory__c/fields/Release_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Release_Acronym__c</fullName>
    <formula>Release__r.Name</formula>
    <label>Release Acronym</label>
    <type>Text</type>
</CustomField>