force-app/main/default/objects/RICEFW_Inventory__c/fields/RICEFW_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Autonumber__c</fullName>
    <label>RICEFW Autonumber</label>
    <type>AutoNumber</type>
</CustomField>