force-app/main/default/objects/RICEFW_Inventory__c/fields/RICEFW_ID__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_ID__c</fullName>
    <formula>Release_Acronym__c + &quot;.&quot; + RICEFW_Type_Acronym__c + &quot;.&quot; + RICEFW_Autonumber__c</formula>
    <inlineHelpText>Release + RICEFW Object + RICEFW #</inlineHelpText>
    <label>RICEFW ID</label>
    <type>Text</type>
</CustomField>