force-app/main/default/objects/RICEFW_Inventory__c/fields/RICEFW_Type_Acronym__c.field-meta.xml
<CustomField>
    <fullName>RICEFW_Type_Acronym__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;Reports&quot;, &quot;R&quot;, 
 IF(RecordType.DeveloperName = &quot;Interfaces&quot;, &quot;I&quot;,
  IF(RecordType.DeveloperName = &quot;Conversions&quot;, &quot;C&quot;,
   IF(RecordType.DeveloperName = &quot;Enhancements&quot;, &quot;E&quot;,
    IF(RecordType.DeveloperName = &quot;Application_Pages_Views&quot;, &quot;F&quot;,
     IF(RecordType.DeveloperName = &quot;Workflows&quot;, &quot;W&quot;, null))))))</formula>
    <label>RICEFW Type Acronym</label>
    <type>Text</type>
</CustomField>