force-app/main/default/objects/RICEFW_Inventory__c/fields/System_Impacted__c.field-meta.xml
<CustomField>
    <fullName>System_Impacted__c</fullName>
    <label>System Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>EAI</fullName>
            </value>
            <value>
                <fullName>Data Hub</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Surround</fullName>
            </value>
            <value>
                <fullName>Pricetool</fullName>
            </value>
            <value>
                <fullName>STARS</fullName>
            </value>
            <value>
                <fullName>VZW</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>