force-app/main/default/objects/RICEFW_Inventory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Interface - Inbound</fullName>
            </value>
            <value>
                <fullName>Interface - Outbound</fullName>
            </value>
            <value>
                <fullName>Automatic Conversion</fullName>
            </value>
            <value>
                <fullName>Manual Conversion</fullName>
            </value>
            <value>
                <fullName>Enhancements</fullName>
            </value>
            <value>
                <fullName>Application Pages</fullName>
            </value>
            <value>
                <fullName>Views</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>