force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Application_Pages_Views.recordType-meta.xml
<RecordType>
    <fullName>Application_Pages_Views</fullName>
    <active>true</active>
    <label>Application Pages / Views</label>
</RecordType>