force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Conversions.recordType-meta.xml
<RecordType>
    <fullName>Conversions</fullName>
    <active>true</active>
    <label>Conversions</label>
</RecordType>