force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Enhancements.recordType-meta.xml
<RecordType>
    <fullName>Enhancements</fullName>
    <active>true</active>
    <label>Enhancements</label>
</RecordType>