force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Interfaces.recordType-meta.xml
<RecordType>
    <fullName>Interfaces</fullName>
    <active>true</active>
    <label>Interfaces</label>
</RecordType>