force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Reports.recordType-meta.xml
<RecordType>
    <fullName>Reports</fullName>
    <active>true</active>
    <label>Reports</label>
</RecordType>