force-app/main/default/objects/RICEFW_Inventory__c/recordTypes/Workflow.recordType-meta.xml
<RecordType>
    <fullName>Workflow</fullName>
    <active>true</active>
    <label>Workflow</label>
</RecordType>